--- a/src/components/index/interview.module.scss
+++ b/src/components/index/interview.module.scss
@@ -5,7 +5,7 @@
   text-align: center;
   margin: 0 auto;
 
-  font-size: 24px;
+  font-size: 1.5em;
   font-weight: normal;
 }
 
@@ -13,27 +13,27 @@
   display: flex;
   flex-direction: column;
   width: 90%;
-  max-width: 640px;
+  max-width: 40em;
   margin: 0 auto;
   align-items: stretch;
 
   padding: 0;
   list-style-type: none;
 
-  > li {
-    margin-top: 50px;
+  >li {
+    margin-top: 3.125em;
 
-    > h2 {
+    >h2 {
       color: $SECONDARY;
 
-      font-size: 18px;
+      font-size: 1.125em;
       font-weight: normal;
 
       margin: 0;
     }
 
-    > p {
-      margin: 16px 0 0 50px;
+    >p {
+      margin: 1em 0 0 3.125em;
 
       a {
         color: inherit;
