--- a/src/styles/_main.module.scss
+++ b/src/styles/_main.module.scss
@@ -1,4 +1,5 @@
 @import "_fonts.module";
+@import "_mixins.module";
 
 $PRIMARY: #CDE7F6;
 $SECONDARY: #F9D0CD;
@@ -11,4 +12,9 @@ body {
 
   color: $PRIMARY;
   font-family: Inter, -apple-system, Roboto, sans-serif, serif;
+  font-size: 16px;
+
+  @include mobile {
+    font-size: 4vw;
+  }
 }
