--- a/src/styles/_main.module.scss
+++ b/src/styles/_main.module.scss
@@ -1,10 +1,10 @@
 @import "_fonts.module";
 @import "_mixins.module";
 
-$PRIMARY: #CDE7F6;
-$SECONDARY: #F9D0CD;
+$PRIMARY: #cde7f6;
+$SECONDARY: #f9d0cd;
 $BACKGROUND: #003049;
-$HIGHLIGHT: #FFFFFF;
+$HIGHLIGHT: #ffffff;
 
 body {
   margin: 0;
