--- a/src/components/background/background.module.scss
+++ b/src/components/background/background.module.scss
@@ -5,9 +5,11 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
 
   z-index: -1;
 
-  color: white;
   opacity: 0.08;
+  background-image: url(/images/background.svg);
+  background-position: top center;
 }
