--- a/src/components/contact-footer/contact-footer.module.scss
+++ b/src/components/contact-footer/contact-footer.module.scss
@@ -1,17 +1,3 @@
-.footer {
-  width: 90%;
-  margin: 0 auto;
-
-  overflow: auto;
-
-  > p {
-    margin: 3.125em 0;
-    text-align: center;
-
-    font-size: 0.75em;
-  }
-}
-
 .heading {
   width: 80%;
   text-align: center;
@@ -45,6 +31,25 @@
         max-height: 1.875em;
         vertical-align: middle;
       }
+    }
+  }
+}
+
+.link {
+  width: 90%;
+  margin: 1em auto 0 auto;
+  text-align: center;
+
+  > a {
+    font-size: 0.75em;
+    text-decoration: underline;
+
+    > .icon {
+      margin-left: 0.5em;
+
+      max-width: 1em;
+      max-height: 1em;
+      vertical-align: -0.125em;
     }
   }
 }
