--- a/src/components/contact-section/contact-section.module.scss
+++ b/src/components/contact-section/contact-section.module.scss
@@ -1,30 +1,26 @@
-.footer {
-  width: 90%;
-  margin: 0 auto;
-
-  overflow: auto;
-
-  > p {
-    margin: 3.125em 0;
-    text-align: center;
-
-    font-size: 0.75em;
-  }
-}
+@import "@/lib/colors";
 
 .heading {
   width: 80%;
   text-align: center;
   margin: 0 auto;
 
+  color: $SECONDARY;
+
   font-size: 1.5em;
   font-weight: normal;
+}
+
+.description {
+  width: 80%;
+  text-align: center;
+  margin: 0.3125em auto 0 auto;
 }
 
 .socials {
   display: flex;
   width: 90%;
-  margin: 0.625em auto -0.625em auto;
+  margin: 1em auto -1em auto;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
@@ -33,7 +29,7 @@
   list-style-type: none;
 
   > li {
-    margin: 0.625em;
+    margin: 1em;
 
     > a {
       display: inline-block;
