--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,5 +1,3 @@
-@import "@/lib/colors";
-
 .footer {
   width: 90%;
   margin: 0 auto;
@@ -7,46 +5,9 @@
   overflow: auto;
 
   > p {
-    margin: 3.125em 0;
+    margin: 0 0 3.125em 0;
     text-align: center;
 
     font-size: 0.75em;
-  }
-}
-
-.heading {
-  width: 80%;
-  text-align: center;
-  margin: 0 auto;
-
-  font-size: 1.5em;
-  font-weight: normal;
-}
-
-.socials {
-  display: flex;
-  width: 90%;
-  margin: 0.625em auto -0.625em auto;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-
-  padding: 0;
-  list-style-type: none;
-
-  > li {
-    margin: 0.625em;
-
-    > a {
-      display: inline-block;
-
-      cursor: pointer;
-
-      > img {
-        max-width: 1.875em;
-        max-height: 1.875em;
-        vertical-align: middle;
-      }
-    }
   }
 }
