Create hidden learn tab

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -5,7 +5,7 @@
   overflow: auto;
 
   > p {
-    margin: 0 0 3.125em 0;
+    margin-bottom: 3.125em;
     text-align: center;
 
     font-size: 0.75em;
